tests/ui/serde/serde.stderr
error: Found unused `#[serde(...)]`
 --> tests/ui/serde/serde.rs:6:1
  |
6 | #[serde(crate = "serde_")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
